dev/sass/_homepageBody.scss
/* ... */
// rwd 576以下
@media screen and (max-width: 576px) {
    body {
        height: fit-content !important;
    }

    .homepageBody {
        display: none;
    }

    .homepageBody576 {
        display: block;
    }

    .firstScreen576 {
        // border: 1px solid red;
        padding-top: 30%;
        width: 100%;
        height: 100vh;
        background-image: url(../images/homepage.jpg);

        p.taiwanTitle {
            // border: 1px solid red;
            font-size: 50px;
            letter-spacing: 5px;
            font-weight: 300;
            margin-left: 50%;
            transform: translateX(-50%);
            white-space: nowrap;
            width: 280px;
        }

        pre.taiwan576 {
            // border: 1px solid red;
            font-size: 18px;
            margin-left: 50%;
            transform: translateX(-50%);
            color: $colorSecondary2;
            width: 280px;
        }

        ul {
            // border: 1px solid red;
            width: 95%;
            margin-top: 35px;
            margin-left: 50%;
            transform: translateX(-50%);
            text-align: center;

            li.selectbox576 {
                // border: 1px solid red;
                width: 50%;
                margin-bottom: 10px;
                padding: 15px;
                margin-left: 50%;
                transform: translateX(-50%);
                font-size: 18px;
                border-radius: 5px;
                &:hover{
                    cursor: pointer;
                }
                p {
                    margin: 0;
                }
            }
        }

        img.scroll {
            width: 40px;
            margin-top: 35px;
            margin-left: 50%;
            transform: translateX(-50%);
            animation: jump 2s infinite;
        }

        @keyframes jump {
            0% {
                transform: translate(-50%, 0px);
            }

            50% {
                transform: translate(-50%, -9px);
            }

            100% {
                transform: translate(-50%, 0px);
            }
        }
    }

    // 第一屏的三個選擇box
    .selectbox1576 {
        background-color: rgba(255, 255, 255, .8);
        color: $colorMain1;
    }

    .selectbox1576>p {
        color: $colorMain1;
    }

    .selectbox2576 {
        background-color: rgba(216, 86, 126, .8);
        color: $colorSecondary2;
    }

    .selectbox2576>p {
        color: $colorSecondary2;
    }

    .selectbox3576 {
        background-color: rgba(188, 38, 84, .8);
        color: $colorSecondary2;
    }

    .selectbox3576>p {
        color: $colorSecondary2;
    }

    .secondScreen576 {
        text-align: center;
        p{
            // border: 1px solid red;
            text-align: center;
            padding: 30px;
            color: $colorMain1;
            font-size: 18px;
        }

        button {
            margin: 20px;
        }
    }

    .thirdScreen576 {
        text-align: center;
        background-color: $colorMain1;

        p {
            // border: 1px solid red;
            text-align: center;
            padding: 30px;
            color: $colorSecondary2;
            font-size: 18px;
        }

        button {
            margin: 20px;
            @include button(100px, 40px, $colorMain1, $colorSecondary2, $colorSecondary2);
        }
    }

    .forthScreen576 {
        text-align: center;

        p {
            // border: 1px solid red;
            text-align: center;
            padding: 30px;
            color: $colorMain1;
            font-size: 18px;
        }
        button {
            margin: 20px;
        }
    }
}

